--- a/PrivateMeanEstimation/index.html
+++ b/PrivateMeanEstimation/index.html
@@ -260,16 +260,18 @@ Step 2 of main proof
 <p><span class="math display">\[r(c) := \frac{\mathbb{P}_{X \sim A}\Big[View_C(X) = c\Big]}{\mathbb{P}[View_C(0) = c]}\]</span></p>
 <p>In the local model, each user is independent of one another, so</p>
 <p><span class="math display">\[\begin{align*}
-r(c) &amp;= \prod_{i=1}^n \frac{\mathbb{P}_{X \sim A}\Big[S(X_i) = c_i\Big]}{\mathbb{P}[S(0) = c]} \\
+r(c) &amp;= \prod_{i=1}^n \frac{\mathbb{P}_{X \sim A}\Big[S(X_i) = c_i\Big]}{\mathbb{P}[S(0) = c_i]} \\
 &amp;= \prod_{i=1}^n r_i(c_i) \\
 \log r(c)&amp;= \sum_{i=1}^n V_i
 \end{align*}\]</span></p>
 <h3 id="lemma-1">Lemma 1</h3>
+<p><strong>Lemma 1 follows from the defintion of DP and Taylors theorem</strong></p>
 <p>For every <span class="math inline">\(0 &lt; \epsilon \leq 1\)</span>, and <span class="math inline">\(\forall i\)</span>, we have with probaility 1,</p>
 <p><span class="math display">\[ 1 - 2\alpha\epsilon \leq r(c_i) \leq 1 + 4\alpha\epsilon \]</span></p>
 <p><span class="math display">\[ 4\alpha\epsilon \leq V_i \leq 4\alpha\epsilon \]</span></p>
 <p>where <span class="math inline">\(r(c_i)\)</span> and <span class="math inline">\(V_i\)</span> are as defined previously</p>
 <h3 id="lemma-2">Lemma 2</h3>
+<p><strong>Lemma 2 follows from Lemma 1</strong></p>
 <p>For every <span class="math inline">\(0 &lt; \epsilon \leq 1\)</span>, and <span class="math inline">\(\forall i\)</span></p>
 <p><span class="math display">\[\mathbb{E}[V_i] \leq 32\alpha^2\epsilon^2\]</span></p>
 <h3 id="lemma-3">Lemma 3</h3>
@@ -292,7 +294,22 @@ e^{v}p_{0}(G(c) \in D) + e^{-\frac{(v - 32)^2}{32}} &amp;\geq p_{A}(G(c) \in D) 
 Proof for Step 1 of main proof
 </button>
 <div id="step1" class="collapse">
-
+<h3 id="theorem">Theorem</h3>
+<p>If there exists an <span class="math inline">\(\epsilon\)</span>-differentially private local model that approximates the sum of <span class="math inline">\(n\)</span> binary values upto error <span class="math inline">\(\tau/2\)</span> with probability <span class="math inline">\(1 - \gamma\)</span> by sending <span class="math inline">\(\rho\)</span> messages then <span class="math inline">\(\forall \kappa\)</span>, there exists a <span class="math inline">\(\epsilon\)</span>-differentially private local model that approximates <span class="math inline">\(GAP-TR_{\kappa, \tau}\)</span> with probability at <span class="math inline">\(1 - \gamma\)</span> by sending at most <span class="math inline">\(\rho\)</span> messages.</p>
+<p><strong>Proof</strong>:</p>
+<p>The proof is relatively simple. Since it’s an existence proof we have to only come up one approximation of <span class="math inline">\(GAP-TR_{\kappa, \tau}\)</span> for any <span class="math inline">\(\hat{f(X)}\)</span> approximation of the sum.</p>
+<p>Let <span class="math inline">\(\hat{f(X)}\)</span> be the approximation of a sum of <span class="math inline">\(n\)</span> binary values. Define <span class="math inline">\(\hat{g(X)}\)</span> to be 0 if <span class="math inline">\(\hat{f(X)} \leq \kappa + \tau/2\)</span> and 1 otherwise. Let <span class="math inline">\(g(X)\)</span> and <span class="math inline">\(f(X)\)</span> be the true values of <span class="math inline">\(GAP-TR_{\kappa, \tau}\)</span> and <span class="math inline">\(sum\)</span> respectively.</p>
+<p>We are given that $| f(X) - | tau/2 $ with probability less than <span class="math inline">\(\gamma\)</span></p>
+<p>It is easy to show <span class="math inline">\(\hat{g(X)}\)</span> approximates <span class="math inline">\(GAP-TR_{\kappa, \tau}\)</span> with <span class="math inline">\(\tau/2\)</span> error with probability <span class="math inline">\(1-\gamma\)</span>. <strong>Assume it does not</strong></p>
+<p>Consider the error event <span class="math inline">\(\hat{g(X)} = 0\)</span> and <span class="math inline">\(g(X)=1\)</span>, by our assumption this event happens with probability greater than <span class="math inline">\(\gamma\)</span>.</p>
+<p>If <span class="math inline">\(\hat{g(X)} = 0\)</span>, then <span class="math inline">\(\hat{f(X)} \leq \kappa + \tau/2\)</span> and if <span class="math inline">\(g(X) =1\)</span>, then <span class="math inline">\(f(x) \geq \kappa + \tau\)</span></p>
+<p>We take the smallest value for <span class="math inline">\(f(X)\)</span> and the largest value for <span class="math inline">\(\hat{f(X)}\)</span> and get</p>
+<p><span class="math display">\[\begin{align*}
+| f(X) - \hat{f(X)}| &amp;\geq | \kappa + \tau - kappa -\tau/2 |
+&amp;= \tau/2
+\end{align*}\]</span></p>
+<p>By our assumptions the above event happens with probability greater than <span class="math inline">\(\gamma\)</span>. However by problem statement we had $| f(X) - | tau/2 $ with probability less than <span class="math inline">\(\gamma\)</span> so we have reached a contradiction. Our assumption was false.</p>
+<p><strong>The main proof uses the contrapositive of the above theorem – where we show that all local private protocol for approximating gap threshold upto <span class="math inline">\(\sqrt{n}\)</span> error fails with contant probaility, thus the same can be said about sum</strong>.</p>
 </div>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#lemma1">
 Lemma 1
@@ -316,13 +333,44 @@ r_i(c_i) &amp;= \frac{\mathbb{P}_{X \sim A}\Big[S_i(X_i) = c_i\Big]}{\mathbb{P}[
 Lemma 2
 </button>
 <div id="lemma2" class="collapse">
-
+<p>This proof assumes that each sanitizer <span class="math inline">\(S_i\)</span>’s’ output is in a countable set. <strong>NOTE: This assumption is not broken in local privacy as the number of messages per user is bounded. As the inputs are only 1 or 0, the set of possible outputs has to be countable. If you were to unbound this by sending infinite messages per input– you are no longer in the local protocol of restricted communication.</strong></p>
+<p>Let <span class="math inline">\(B_{b} := \{ c_i : r_i(c_i) = 1 + b\}\)</span> for <span class="math inline">\(-2\alpha\epsilon \leq b \leq 4\alpha\epsilon\)</span>. Lemma 1 implies there are no other possible values for b.</p>
+<p><span class="math display">\[\begin{align*}
+\frac{\mathbb{P}[S(X_i) = c_i]}{\mathbb{P}[S(0) = c_i]}  &amp;= r_i(c_i) \\
+&amp;= 1 + b \\
+\mathbb{P}[S(0) \in B_b]  &amp;= \frac{\mathbb{P}[S(X_i) \in B_b]}{1+b} \\
+&amp;\leq (1 - b +2b^2)\mathbb{P}[S(X_i) \in B_b] \label{5}\tag{1}\\
+\end{align*}\]</span></p>
+<p><span class="math inline">\(\ref{5}:\)</span> By Taylors theorem of <span class="math inline">\((1 + x)^-1\)</span> or the geometric series <span class="math inline">\(\frac{1}{1-x}\)</span>, where you plug in x as -x.</p>
+<p>Let <span class="math inline">\(\beta=2\alpha\epsilon\)</span></p>
+<p><span class="math display">\[\begin{align*}
+\mathbb{E}[V_i] &amp;= \mathbb{E}_{A}[\log r_i(c_i)] \\
+&amp;= \sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b] \log( 1 + b) \\
+&amp;\leq \sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b] b \label{6}\tag{2}\\
+&amp;=  \sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b] (1 + 2b^2) -  \sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b] (1 -b +2b^2) \\
+&amp;\leq (1 + 2(2\beta)^2)\sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b]  -  \sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b] (1 -b +2b^2) \\
+&amp;\leq (1 + 2(2\beta)^2)\sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(X_i) \in B_b]  -  \sum+_{-\beta \leq b \leq 2\beta} \mathbb{P}[S(0) \in B_b] \label{7}\tag{3}\\
+&amp;=  (1 + 8\beta^2)\mathbb{P}[S(X_i) \in \cup_{b}B_b] - \mathbb{P}[S(0) \in \cup_{b}B_b] \\
+&amp;\leq (1 + 8\beta^2).1 - 1 \\
+&amp;= 32(\alpha\epsilon)^2
+\end{align*}\]</span></p>
+<p><span class="math inline">\(\ref{6}: \log(1+x) \leq x\)</span></p>
+<p><span class="math inline">\(\ref{7}:\)</span> By <span class="math inline">\(\ref{5}\)</span></p>
 </div>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#lemma3">
 Lemma 3
 </button>
 <div id="lemma3" class="collapse">
-
+<p><span class="math display">\[\begin{align*}
+\mathbb{P}_{A}[r(C) &gt; e^v] &amp;= \mathbb{P}_{A}[\sum_{i=1}^n V_i &gt; v] \label{2}\tag{1}\\
+&amp;= \mathbb{P}_{A}\Big[\sum_{i=1}^n V_i - \sum_{i=1}^n \mathbb{E}[V_i]&gt; v - \sum_{i=1}^n \mathbb{E}[V_i]\Big] \\
+&amp;\leq \mathbb{P}_{A}\Big[\sum_{i=1}^n V_i - \sum_{i=1}^n \mathbb{E}[V_i]&gt; v - 32\alpha^2\epsilon^2\Big] \tag{2} \label{3}\\
+&amp;\leq exp\Big\{ -\frac{2(v - n32\alpha^2\epsilon^2)^2}{64n\alpha^2\epsilon^2} \Big\} \tag{3} \label{4} \\
+&amp;= exp\Big\{ -\frac{(v - 32)^2}{32} \Big\}
+\end{align*}\]</span></p>
+<p><span class="math inline">\(\ref{2}:\)</span> Taking log on both sides and using defintions</p>
+<p><span class="math inline">\(\ref{3}:\)</span> Lemma 2</p>
+<p><span class="math inline">\(\ref{4}:\)</span> Hoeffding on bounded variables, from Lemma 2, we get <span class="math inline">\(V_i\)</span> is upper and lower bounded. Plug and play</p>
 </div>
 <h2 id="shuffle-privacy">Shuffle Privacy</h2>
 <p>The following screenshot is taken from the <a href="https://www.youtube.com/watch?v=wkF_uBo-bLo">official talk</a> by one of the authors and provides an overview of shuffle privacy.</p>
