--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <ul>
 <li><a href="Definitions/">Differential Privacy Cheat sheet</a>: I define central differential privacy, local differential privacy and shuffle privacy. Introduce well the laplace mechanism - what it is and why it works. Simulation code to understand <span class="math inline">(<em>α</em>, <em>β</em>)</span> accuracy guarantees for the laplace mehanism is provided.</li>
 <li><a href="ConcentrationInequalities/">Concentration Inequalities: building blocks to understanding proofs</a>: A lot of the alogirithms in this area try to approximate the expected value of random variables. Knowing when sample means are a good representation of expected mean seems to be a building block for this area and machine learning theory.</li>
-<li><a href="ExponentialMechanism/">Exponential Mechanism</a>: A theoretical technique developed for when the utility of outputs being considered are very sensitive to perturbation. Examples include auction prices or voting counts. A little bit of noise could alter the final outcome drastically. I describe the theoretical framework with a few simple non practical examples.<br />
+<li><a href="ExponentialMechanism/">Exponential Mechanism</a>: A theoretical technique developed for when the utility of outputs being considered are very sensitive to perturbation. Examples include auction prices or voting counts. A little bit of noise could alter the final outcome drastically. I describe the theoretical framework with a few simple non practical examples. <strong>TODO</strong><br />
 </li>
-<li><a href="">Composition Theorems</a>: Todo</li>
+<li><a href="">Composition Theorems</a>: <strong>TODO</strong></li>
 </ul>
 <h3 id="research-papers">Research Papers</h3>
 <ul>
@@ -47,26 +47,33 @@
 </li>
 <li><a href="ShuffleSumMeanEstimateRasmus/">Shuffle: Almost Central Almost no communication</a></li>
 <li><a href="LearningMultiConcepts/">Simultaneous Private Learning of Multiple Concepts</a></li>
-<li><a href="FrequencyEstimationSurvey/index.html">frequency Estimation with local privacy: A survey</a></li>
+<li><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></li>
 <li><a href="PureProtocols/">Pure LDP</a></li>
 </ul>
 <!-- * [Succint Histogram Problem -- local privacy](SuccintHist-Bassily/index.html) -->
 <h2 id="specific-problems-and-how-a-series-a-research-papers-connect-them">Specific problems and how a series a research papers connect them</h2>
 <p>Sometimes I care about a general problem or application like centrally private mean estimation will go through material related to the problem and analyse the solutions to get an idea of the contributionsq with regard to that problem only. In these notes I should be able to explain to a non technical person, why the results are important. Additionally, I write code to simulate the alogorithms and check for gaps in practical deployement.</p>
 <ul>
-<li><a href="PrivateMeanEstimation/">Private Mean Estimation</a>: In this work, we study the problem of summing (aggregating) real numbers or integers, a basic primitive in numerous machine learning tasks. People have attempted this under many different assumptions and come with different solutions. These notes summarise the works from:
+<li><a href="PrivateMeanEstimation/">Private Mean Estimation</a>: In this work, we study the problem of summing (aggregating) real numbers or integers, a basic primitive in numerous machine learning tasks. What solutions have researchers come up with for central, local and shuffle privacy:
 <ul>
-<li>Laplace</li>
-<li>Pagh</li>
-<li>Cheu</li>
-<li>Cormode</li>
+<li>Laplace mechanism - Textbook for DP</li>
+<li><a href="https://arxiv.org/pdf/1103.2626.pdf">Lower bounds for local differential privacy</a></li>
+<li><a href="ShuffleSumBinaryRasmus/">Ghazi, Rasmus Pagh – binary sums and histograms</a><br />
+</li>
+<li><a href="ShuffleSumMeanEstimateRasmus/">Ghazi, Pagh – real number sums</a></li>
+<li><a href="ShufflePrivacy/index.html">Cheu</a></li>
+<li><a href="(FrequencyEstimationSurvey/index.html)">Cormode</a></li>
 </ul></li>
-<li><a href="">Private Password Lists</a></li>
+<li><a href="PrivatePassowrds">Private Password Lists</a>: Application of the exponential mechanism (first I have seen so far) <strong>TODO</strong>
+<ul>
+<li><a href="https://jbonneau.com/doc/BDB16-NDSS-pw_list_differential_privacy.pdf">Password Frequency list I</a></li>
+<li><a href="https://arxiv.org/abs/1910.03553">Private Anonymous histograms</a></li>
+</ul></li>
 </ul>
 <h2 id="my-own-work">My own work</h2>
 <p>In this seciton I describe original work that I am thinking of. Most of this work is done under the suprvision of <a href="https://warwick.ac.uk/fac/sci/dcs/people/graham_cormode/">Graham Cormode</a></p>
 <ul>
-<li><a href="">Re-deriving and extending Trie heavy hitters</a></li>
+<li><a href="">Re-deriving and extending Trie heavy hitters</a>: <strong>TODO</strong></li>
 </ul>
 <div class=container>
 <div id="footer">
