--- a/ConcentrationInequalities/index.html
+++ b/ConcentrationInequalities/index.html
@@ -177,6 +177,9 @@ Proof
 <p>TODO</p>
 <h2 id="hoeffdings-bound">Hoeffdings Bound</h2>
 <p>TODO</p>
+<h2 id="monte-carlo-simulations">Monte Carlo Simulations</h2>
+<p>Python code to consolidate understanding – re-creating definitions in code and observing how often the theoretical guarantees are violated.</p>
+<embed type="text/html" src="code/sample.html" width="800" height="600">
 <h2 id="hypergeometric-distribution">Hypergeometric distribution</h2>
 <p>TODO</p>
 <h2 id="negative-correlation">Negative Correlation</h2>
