bAcking up before linking sampling to noise

--- a/PrivateVoting/index.html
+++ b/PrivateVoting/index.html
@@ -27,23 +27,21 @@
   </ul>
 </head>
 <body>
-
 <div class="container">
-<h2 id="the-essence-of-local-privacy">The essence of local privacy</h2>
-<p>At the heart of these protocols, each user is asked a simple question about their data by a data analyst. The user then determines randomly whether to answer the question truthfully, or to pick some false response, according to a specified probability distribution. This randomization gives each user “plausible deniability”, and protects their privacy.</p>
-<p>To fully specify a protocol:</p>
+<h1 id="private-voting">Private Voting</h1>
+<p>This material needs a fair bit of new background. The topics include:</p>
+<ul>
+<li><a href="ExponentialMechanism">Exponential Mechanism</a></li>
+<li><a href="">A review of non-private Rank Aggregation</a></li>
+<li><a href="">A general understanding of Voting methods</a></li>
+</ul>
+<h2 id="references">References</h2>
 <ol type="1">
-<li>we need to determine what questions are asked,</li>
-<li>and what probability distribution is used over the set of possible answers.</li>
+<li><a href="https://arxiv.org/pdf/1206.5265.pdf">Consensus ranking under the exponential model</a></li>
 </ol>
-<p>We also need to show how the data analyst can combine the answers to build a picture of the overall frequency distribution, and understand the accuracy of the results.</p>
-<h2 id="background-material">Background Material</h2>
-<h3 id="local-privacy">Local privacy</h3>
-<p>Already defined</p>
-<h3 id="hadamard-transformation">Hadamard Transformation</h3>
-<p>A special case of the discrete fourier transform.</p>
-<h3 id="pure-protocols">Pure Protocols</h3>
-<p>Wang et al. Needs a little bit of thinking as to what they really are.</p>
+<ol start="2" type="1">
+<li><a href="https://dl.acm.org/doi/pdf/10.5555/2791220.2791224">Rank Aggregation: Together We’re Strong</a></li>
+</ol>
 </div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
