Read to upload link paper

--- a/ShufflePrivacy/index.html
+++ b/ShufflePrivacy/index.html
@@ -198,7 +198,7 @@ This section in the paper has many typos. I am going to try and re-derive them m
 </div>
 <h2 id="histogram-summing-the-full-version">Histogram summing the full version</h2>
 <p>The full version of the histogram just uses <span class="math inline">\(\textit{P}_{\epsilon, \delta}^{zsum}\)</span> for each coordinate <span class="math inline">\(j \in [d]\)</span> where <span class="math inline">\(d\)</span> is the dimension of the histogram.</p>
-<h3 id="an-algorithm-for-binary-sums-that-satisfies-shuffle-privacy-1">An algorithm for binary sums that satisfies shuffle privacy</h3>
+<h3 id="an-algorithm-for-histogram-sums-on-integers-that-satisfies-shuffle-privacy">An algorithm for histogram sums on integers that satisfies shuffle privacy</h3>
 <div class="algorithm">
 <p><strong>RANDOMISER:</strong> <span class="math inline">\(\textit{R}_{\epsilon, \delta}^{hist}(x \in [d])\)</span></p>
 <p>Input:</p>
