--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 <h2 id="my-own-work">My own work</h2>
 <p>In this seciton I describe original work that I am thinking of. Most of this work is done under the suprvision of <a href="https://warwick.ac.uk/fac/sci/dcs/people/graham_cormode/">Graham Cormode</a></p>
 <ul>
-<li><a href="">Re-deriving and extending Trie heavy hitters</a>: <strong>TODO</strong></li>
+<li><a href="">Sample and threshold</a>: <strong>Work by Graham before we started working together: Under Submission for AI Stats</strong></li>
+<li><a href="EquivalenceOfPrivacyModels/">Connecting Central , Shuffle and Sampling Privacy</a>: <strong>new work</strong></li>
 </ul>
 <div class=container>
 <div id="footer">
