--- a/Scratch/index.html
+++ b/Scratch/index.html
@@ -27,7 +27,15 @@
   </ul>
 </head>
 <body>
-<h1 id="exponentialmechanism">ExponentialMechanism</h1>
+
+<div class="container">
+<p>Some stuff I need to learn/do in the near future:</p>
+<ul>
+<li>Computation Complexity notes</li>
+<li>Finish off concentration inequalities</li>
+<li>Local, private, efficient protocols for succinct histograms: [Bassily/Smith 1]: The original lower buond algorithm for local privacy. But how is it different from the one I derived. There are so many that claim the same things.</li>
+</ul>
+</div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
