Link between parameters almost found

--- a/ConcentrationInequalities/index.html
+++ b/ConcentrationInequalities/index.html
@@ -185,6 +185,9 @@ Proof
 <h2 id="negative-correlation">Negative Correlation</h2>
 <p>TODO</p>
 <h2 id="useful-tricks">Useful tricks</h2>
+<ol type="1">
+<li><a href="https://en.wikipedia.org/wiki/Lambert_W_function">Lamberts W Function</a>: the Lambert W function, also called the omega function or product logarithm, is a multivalued function, namely the branches of the converse relation of the function <span class="math inline">\(f(w) = w \times e^w\)</span>, where w is any complex number and <span class="math inline">\(e^w\)</span> is the exponential function.</li>
+</ol>
 <h3 id="bounding-bernoullis">Bounding Bernoullis</h3>
 <p>TODO</p>
 <h3 id="bounding-exponentials">Bounding exponentials</h3>
