--- a/Scratch/index.html
+++ b/Scratch/index.html
@@ -34,6 +34,7 @@
 <li>Computation Complexity notes</li>
 <li>Finish off concentration inequalities</li>
 <li>Local, private, efficient protocols for succinct histograms: [Bassily/Smith 1]: The original lower buond algorithm for local privacy. But how is it different from the one I derived. There are so many that claim the same things.</li>
+<li>What is exactly amplification by shuffling!!!</li>
 </ul>
 </div>
 <div id="footer">
