Started the connection between RR and Graham.

--- a/RRSurvey/index.html
+++ b/RRSurvey/index.html
@@ -27,7 +27,17 @@
   </ul>
 </head>
 <body>
-<h1 id="exponentialmechanism">ExponentialMechanism</h1>
+
+<div class="container">
+<h1 id="a-survey-on-randomised-response">A survey on randomised response</h1>
+<p>Notes based on [<a href="https://imai.fas.harvard.edu/research/files/randresp.pdf" title="A survey of Randomised Response techniques">1</a>]</p>
+<h2 id="warners">Warners</h2>
+<h2 id="forced-response-design">Forced Response Design</h2>
+<h1 id="references">References</h1>
+<ol type="1">
+<li><a href="https://imai.fas.harvard.edu/research/files/randresp.pdf">A survey of Randomised Response techniques</a></li>
+</ol>
+</div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
